...
          }).build(context),
          body: Form(
            key: _formKey,
            child: Container(
              color: Color.fromRGBO(244, 244, 244, 1),
              child: ListView(
                key: Key("addproducLv"),
                padding: EdgeInsets.all(20),
                children: [
                  Column(
                    children: [
                      Container(
                          padding: EdgeInsets.only(top: 20, bottom: 20),
                          child: WidgetAlignText(
                              text: "Nuevo Producto", size: 26)),
                      Column(
                        mainAxisAlignment: MainAxisAlignment.spaceEvenly,
                        children: [
                          Container(
                              padding: EdgeInsets.only(bottom: 10),
                              child: WidgetAlignText(
                                  text: "Datos del producto", size: 18)),
                          WidgetTextField(
                            keyText: Key("nameTf"),
                            label: "Nombre",
                            controller: name,
                            validator: (value) {
                              if (value!.isEmpty) {
                                return "Por favor ingrese el nombre del producto";
                              }
                            },
                            obscure: false,
                            digitsOnly: false,
                          ),
                          WidgetTextField(
                            keyText: Key("priceTf"),
                            label: "Precio",
                            controller: price,
                            validator: (value) {
                              if (value!.isEmpty) {
                                return "Por favor ingrese el precio del producto";
                              }
...
                              }
                            },
                            obscure: false,
                            digitsOnly: true,
                          ),
                          WidgetTextField(
                            keyText: Key("urlTf"),
                            label: "URL Imagen",
                            controller: urlImage,
                            validator: (value) {
                              if (value!.isEmpty) {
                                return "Por favor ingrese la url del producto";
                              }
                            },
                            obscure: false,
                            digitsOnly: false,
                          ),
                          WidgetTextField(
                            keyText: Key("descriptionTf"),
                            label: "Descripción",
                            controller: description,
                            validator: (value) {
                              if (value!.isEmpty) {
                                return "Por favor ingrese una breve descripcion";
                              }
...
                          ),
                          Container(
                            margin: EdgeInsets.only(top: 10),
                            child: Row(
                              children: [
                                dropDown(
                                    key: Key("categoryDb"),
                                    icon: Icon(Icons.arrow_drop_down),
                                    initValue: dropdownValue,
                                    items: categorias),
                              ],
                            ),
                          ),
...
                      Container(
                        margin: EdgeInsets.only(top: 10),
                        child: Row(
                          children: [
                            WidgetButton(
                              loading: loading,
                              keyButton: Key("addproductBtn"),
                              text: "Añadir Producto",
                              onPressed: handlerAddProduct,
                              typeMain: true,
                            ),
                          ],
                        ),
...
