...
        body: Form(
          key: _formKey,
          child: Container(
            padding: EdgeInsets.all(20),
            color: Color.fromRGBO(244, 244, 244, 1),
            child: ListView(
              key: Key("signupLv"),
              children: [
                SizedBox(
                  height: media.height - 130,
                  child: Column(
                    children: [
                      Container(
                        padding: EdgeInsets.only(left: 10, right: 10),
                        child: Row(
                          children: [
                            Expanded(
                              flex: 1,
                              child: Text(
                                "Ya casi está",
                                overflow: TextOverflow.ellipsis,
                                maxLines: 5,
                                style: TextStyle(
                                    fontSize: 25, fontWeight: FontWeight.bold),
                              ),
                            ),
...
                      ),
                      Expanded(
                        child: Column(
                          mainAxisAlignment: MainAxisAlignment.spaceEvenly,
                          children: [
                            WidgetTextField(
                              keyText: Key("userTf"),
                              label: "Usuario",
                              controller: userTextController,
                              validator: (value) {
                                if (value!.isEmpty) {
                                  return "Por favor ingrese su nombre";
                                }
                              },
                              obscure: false,
                              digitsOnly: false,
                            ),
                            WidgetTextField(
                              keyText: Key("passwordTf"),
                              label: "Contraseña",
                              controller: passTextController,
                              validator: (value) {},
                              obscure: true,
                              digitsOnly: false,
                            ),
                            WidgetTextField(
                              keyText: Key("confirpassTf"),
                              label: "Confirmar contraseña",
                              controller: confirPassTextController,
                              validator: (value) {
                                if (passTextController.text != value) {
                                  return "Error las contraseñas ";
                                }
...
                            ),
                            Row(
                              children: [
                                Obx(
                                  () => WidgetButton(
                                    loading: loading,
                                    keyButton: Key("signupBtn"),
                                    text: "Registrarme!",
                                    onPressed: () async {
                                      if (!loading) {
                                        loading = true;
                                        final form = _formKey.currentState;
                                        form!.save();
                                        if (form.validate()) {
                                          await singUp();
                                          if (registred) {
                                            Get.close(2);
                                            //Get.offAllNamed("/");
                                            getCustomSnackbar(
                                              "Registro exitoso",
                                              "Has sido registrado satisfactoriamente en la aplicación",
                                              type: CustomSnackbarType.success,
                                            );
                                          } else {
                                            getCustomSnackbar(
                                              "Error al intentar Registrarte",
...
