...
        body: Form(
          key: _formKey,
          child: Container(
            padding: EdgeInsets.all(20),
            color: Color.fromRGBO(244, 244, 244, 1),
            child: ListView(
              key: Key("signLv"),
              children: [
                SizedBox(
                  height: media.height - 130,
                  child: Column(
                    children: [
                      Container(
                        padding: EdgeInsets.only(left: 10, right: 10),
                        child: Row(
                          children: [
                            Expanded(
                              flex: 2,
                              child: Text(
                                "Crea tu Nueva Cuenta",
                                overflow: TextOverflow.ellipsis,
                                maxLines: 5,
                                style: TextStyle(
                                    fontSize: 25, fontWeight: FontWeight.bold),
                              ),
                            ),
...
                                }
                              },
                              obscure: false,
                              digitsOnly: false,
                            ),
                            WidgetTextField(
                              keyText: Key("emailTf"),
                              label: "Correo electronico",
                              controller: emailTextController,
                              validator: (value) {
                                if (value!.isEmpty) {
                                  return "Por favor ingrese su E-mail.";
                                } else if (!isEmail(value)) {
...
                                }
                              },
                              obscure: false,
                              digitsOnly: false,
                            ),
                            WidgetTextField(
                              keyText: Key("phoneTf"),
                              label: "Telefono",
                              controller: phoneNTextController,
                              validator: (value) {
                                if (value!.isEmpty) {
                                  return "Por favor ingrese su numero celular.";
                                } else if (value.length != 10) {
...
                              obscure: false,
                              digitsOnly: true,
                            ),
                            Row(
                              children: [
                                WidgetButton(
                                    keyButton: Key("nextBtn"),
                                    text: "Siguiente",
                                    onPressed: () {
                                      final form = _formKey.currentState;
                                      form!.save();
                                      if (form.validate()) {
                                        Get.to(() => SecondRegisterPage(),
...
